# ConstraintsTrainingDynamics

./: .gitignore  .gitmodules  CLAUDE.md  PARAMETERS.md  README.md  TASK.md  main.py  plot_comparison.py  pyproject.toml  train.py
conf/: config.yaml
conf/dataset/: default.yaml
conf/landscape/: default.yaml
conf/metrics/: default.yaml
conf/model/: default.yaml
conf/training/: default.yaml
conf/wandb/: default.yaml
dataset/: generate_dataset.py  generate_datasets_suite.py  qcqp_problem.py
dataset/data/: qcqp_var50_ineq20_eq20_N100_seed2025.pkl  qcqp_var50_ineq20_eq20_N2000_seed2025.pkl
docs/: CONTEXT.md  METRICS.md  PARAMETERS.md
models/: __init__.py  backbone.py  backbone_factory.py  cvxpy_layer.py  soft_penalty.py  theseus_layer.py  transformer_backbone.py
scripts/: analyze_lr_sweep.py  sweep_batch_size.sh  sweep_hidden_dim.sh  sweep_lr.sh  sweep_n_layers.sh  sweep_soft_landscape.sh  sweep_soft_lr_search.sh
training_dynamics/: __init__.py  landscape.py  metrics.py
