[project]
name = "constraintstrainingdynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "theseus-ai>=0.2.3",
    "torch>=2.10.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.67.3",
    "wandb>=0.18.0",
    "hydra-core>=1.3.0",
    "cvxpylayers>=0.1.6",
]
